API adicionada com sucesso, porém link não está funcionando corretamente devido a falha de conexão da minha maquina